[impl-NA] Add refractored view for home screen, single voucher screen, product buttons,profile,sidebar and pretty much gutted the entire freaking UI today

--- a/promopay/scss/auth/auth.styles.scss
+++ b/promopay/scss/auth/auth.styles.scss
@@ -131,8 +131,17 @@
 			padding: 0px;
 		}
 
+		.item.item-input {
+			background-color: $auth-bg;
+
+			select {
+				background-color: $auth-bg;
+			}
+		}
+
 		.multi-inputs
 		{
+			border-right: thin solid #ddd;
 			.col
 			{
 				.item.item-input
