--- a/promopay/scss/auth/auth.variables.scss
+++ b/promopay/scss/auth/auth.variables.scss
@@ -11,7 +11,7 @@ $welcome-facebook-sign-in-bg: $theme-color-1;
 
 // Auth
 $error-color: $theme-color-2;
-$auth-bg: #fcfcfc;
+$auth-bg: #E5EDF0;
 $auth-color: #333333;
 $facebook-blue: #294886;
 $twitter-blue: #00a3dc;
