--- a/promopay/scss/shop/shop.variables.scss
+++ b/promopay/scss/shop/shop.variables.scss
@@ -1,6 +1,6 @@
 // Shop - Common
-$shop-background-color: #EEE;
-$shop-bar-bg: $theme-color-3;
+$shop-background-color: #FFF;
+$shop-bar-bg: $theme-color-4;
 $shop-bar-color: #FFFFFF;
 // $shop-highlighted-color: #1DBB1D;
 $shop-highlighted-color: darken($shop-bar-bg, 16%);
