--- a/promopay/www/views/app/shop/cart.html
+++ b/promopay/www/views/app/shop/cart.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Selected Coupons" class="cart-view" cache-view="false">
+<ion-view view-title="PromoPay Wallet" class="cart-view" cache-view="false">
   <ion-content>
     <div ng-if="products.length == 0">
       <div class="empty-cart">
