--- a/promopay/www/views/app/shop/product-detail.html
+++ b/promopay/www/views/app/shop/product-detail.html
@@ -1,7 +1,4 @@
 <ion-view view-title="" class="product-view">
-  <ion-nav-buttons side="secondary">
-    <button class="button button-icon button-clear ion-share" ng-click="shareViaTwitter(product)"></button>
-  </ion-nav-buttons>
   <ion-content overflow-scroll="true">
     <div class="product-card-content">
       <div class="item item-image">
@@ -15,38 +12,32 @@
           <p class="product-like"><i></i>You Save:</p>
           <p class="likes"><i class="icon ion-social-euro"></i> {{product.offer.val}}</p>
         </div>
-        <p class="product-price" ng-if="product.vchr === null" ng-click="showAddToCartPopup(product)">Create Voucher</p>
+        <p class="product-price" ui-sref="app.shop.popular">Back To Home</p>
       </div>
       <div class="item item-body">
         <p class="product-description">{{product.offer.h2}}</p>
-
-        <label class="item item-input item-select">
-          <div class="input-label">
-            Select Barcode Type
-          </div>
-          <select ng-model="codeDropdown">
-            <option value="" selected>Choose</option>
-            <option value="qr" selected>QR Code</option>
-            <option value="scan">Scan Code</option>
-            <option value="human">Human Code</option>
-          </select>
-        </label>
-
         <div class="barcodes">
-          <div class="qr-code animate-hide" ng-show="codeDropdown=='qr'">
+          <div class="qr-code">
             <p class="product-description">
                 <strong>QR Code</strong></br>
             </p>
             <qr text="qrData" ng-if="qrData"></qr>
           </div>
-
-          <div class="machine-code animate-hide" ng-show="codeDropdown=='scan'">
+        </div>
+      </div>
+      <div class="item item-body">
+        <div class="barcodes">
+          <div class="machine-code">
             <p class="product-description">
                 <strong>Machine Readable Barcode</strong></br>
             </p>
             <barcode type="code128b" render="img" string="{{product.vchr.bcodes[2].b}}" options="vm.options" ></barcode>
           </div>
-          <div class="human-code animate-hide" ng-show="codeDropdown=='human'">
+        </div>
+      </div>
+      <div class="item item-body">
+        <div class="barcodes">
+          <div class="human-code">
             <p class="product-description">
                 <strong>Human Readable Barcode</strong></br>
                 {{product.vchr.bcodes[2].b}}
