--- a/promopay/www/views/app/profile/settings.html
+++ b/promopay/www/views/app/profile/settings.html
@@ -5,17 +5,6 @@
       <div class="item item-divider title">
         Account
       </div>
-      <a class="item item-icon-left settings-option">
-        <i class="icon ion-ios-cart-outline"></i>
-        Credits & Referral
-      </a>
-      <a class="item item-icon-left settings-option">
-        <i class="icon ion-social-usd-outline"></i>
-        Payment
-      </a>
-      <div class="item item-divider title">
-        More
-      </div>
       <a class="item item-icon-left settings-option" ng-click="showTerms()">
         <i class="icon ion-ios-information-outline"></i>
         Terms of Service
@@ -24,11 +13,11 @@
         <i class="icon ion-ios-locked-outline"></i>
         Privacy Policy
       </a>
-      <a class="item item-icon-left settings-option">
+      <a href="http://phs.ie" class="item item-icon-left settings-option">
         <i class="icon ion-ios-help-outline"></i>
         Help
       </a>
-      <a class="item item-icon-left settings-option" ui-sref="facebook-sign-in">
+      <a class="item item-icon-left settings-option" ng-click="logOut()">
         <i class="icon ion-ios-close-outline"></i>
         Sign Out
       </a>
