[impl-NA] Add refractored view for home screen, single voucher screen, product buttons,profile,sidebar and pretty much gutted the entire freaking UI today

--- a/promopay/www/views/app/profile/settings.html
+++ b/promopay/www/views/app/profile/settings.html
@@ -13,6 +13,10 @@
         <i class="icon ion-ios-locked-outline"></i>
         Privacy Policy
       </a>
+      <a class="item item-icon-left settings-option" ng-click="showFAQ()">
+        <i class="icon ion-ios-chatboxes-outline"></i>
+        FAQ
+      </a>
       <a href="http://phs.ie" class="item item-icon-left settings-option">
         <i class="icon ion-ios-help-outline"></i>
         Help
