[impl-NA] Refractor single product view and list views to implement PHS designs

--- a/promopay/scss/common/theme.variables.scss
+++ b/promopay/scss/common/theme.variables.scss
@@ -2,7 +2,9 @@
 $theme-color-1: #4EBABA;
 $theme-color-2: #FF4C4C;
 $theme-color-3: #79D279;
-$theme-color-4: #FF9D4C;
+$theme-color-4: #FF9900;
+$theme-color-5: #003366;
+$theme-color-7: #00A3E4;
 
 // THEME 2
 // $theme-color-1: #9F3BA2;
