--- a/promopay/scss/shop/shop.styles.scss
+++ b/promopay/scss/shop/shop.styles.scss
@@ -85,6 +85,12 @@ ion-nav-bar
     color: #fff;
 }
 
+.btn-view {
+	color: $theme-color-7;
+	background-color: #fff;
+	border-color: $theme-color-7;
+}
+
 .row {
 	.vouchers {
 		border: thin solid #ddd;
