--- a/promopay/www/views/app/side-menu.html
+++ b/promopay/www/views/app/side-menu.html
@@ -17,7 +17,7 @@
         <div class="row menu-top-options">
           <div class="col col-top">
             <ion-list>
-              <ion-item ui-sref-active="active" class="item-icon-left" menu-close ui-sref="app.shop.home">
+              <ion-item ui-sref-active="active" class="item-icon-left" menu-close ui-sref="app.shop.popular">
                 <i class="menu-icon icon ion-ios-home"></i>
                 <h2 class="menu-text">All Vouchers</h2>
               </ion-item>
