--- a/promopay/www/views/auth/dont-have-facebook.html
+++ b/promopay/www/views/auth/dont-have-facebook.html
@@ -11,10 +11,11 @@
     <!-- <div multi-bg="['img/giphy-bg.gif']" interval="3000" helper-class="no-facebook-welcome-bg"> -->
       <div class="top-content row">
         <div class="app-copy col col-center">
-          <h1 class="app-logo">PromoPay</h1>
+          <img ng-src="img/PromoPay-withtagline.png" width="300">
+          <!-- <h1 class="app-logo">PromoPay</h1>
           <p class="app-tagline">
             Be Amazing
-          </p>
+          </p> -->
         </div>
       </div>
       <div class="bottom-content row">
