--- a/promopay/www/views/app/shop/shop-popular.html
+++ b/promopay/www/views/app/shop/shop-popular.html
@@ -6,7 +6,7 @@
   <ion-content>
 
     <!-- Pull To Get New -->
-    <ion-refresher pulling-icon="ion-arrow-down-b" on-refresh="doRefresh()"></ion-refresher>
+    <ion-refresher pulling-icon="ion-ios-loop-strong" on-refresh="doRefresh()"></ion-refresher>
     <!-- /Pull To Get New -->
 
     <!-- Content -->
@@ -14,7 +14,7 @@
       <div class="list card" ng-show="!products.length">
         <div class="item item-avatar">
           <h2>You Have No Vouchers Yet!</h2>
-          <p>Check Back Soon!</p>
+          <p>Check Back Soon or try pulling down<br/> to refresh the app!</p>
         </div>
         <div class="item item-body">
           <p>
@@ -25,7 +25,7 @@
           </p>
         </div>
       </div>
-      <div ng-repeat="product in products | orderBy:'product.valids[0].toT'" ng-if="product.vchr.spends.length == 0 || product.vchr == undefined ||  product.vchr !== null" track by $index class="col col-100 shop-product-narrow-card">
+      <div ng-repeat="product in products | orderBy:'product.valids[0].toT'" ng-if="product.vchr !== null && product.vchr.spends.length <= 0 ||  product.vchr === null" track by $index class="col col-100 shop-product-narrow-card">
         <div class="list">
           <div class="row vouchers">
             <div class="col-25 list-image" style="background-image: url(http://www.rglhosting2.com/validation.3.0.dag/images/vouchers/{{product.offer.imgName}})"></div>
@@ -34,16 +34,16 @@
                 <h2 class="card-title">{{product.offer.h1}}</h2>
                 <p class="card-description">You Save: <b>€ {{product.offer.val}}</b></p>
                 <p class="card-description">{{product.offer.h2}}</p>
-                <button ng-if="product.vchr === null" class="button button-clear button-balanced states" ng-click="showAddToCartPopup(product)">
+                <button ng-if="product.vchr === null" class="button button-outline button-block button-balanced" ng-click="showAddToCartPopup(product)">
                   <i class="icon ion-ios-checkmark"></i> Accept
                 </button>
-                <button ng-if="product.vchr === null" class="button button-clear button-assertive states" ng-click="removeVoucher(product)">
+                <button ng-if="product.vchr === null" class="button button-outline button-block button-assertive" ng-click="removeVoucher(product)">
                   <i class="icon ion-ios-close"></i> Reject
                 </button>
-                <button ng-if="product.vchr === null" class="button button-clear button-phs states" ui-sref="app.product-detail({productId: product.id, productTitle: product.offer.val})">
+                <button ng-if="product.vchr === null" class="button button-outline button-block button-phs" ui-sref="app.product-detail({productId: product.id, productTitle: product.offer.val})">
                   <i class="icon ion-log-in"></i> View
                 </button>
-                <button ng-if="product.vchr.spends.length == 0" class="button button-outline button-block button-balanced" ui-sref="app.product-detail({productId: product.id, productTitle: product.offer.val})">
+                <button ng-if="product.vchr.spends.length === 0" class="button button-outline button-block btn-view" ui-sref="app.product-detail({productId: product.id, productTitle: product.offer.val})">
                   <i class="icon ion-log-in"></i> View Your Voucher
                 </button>
               </div>
