--- a/promopay/www/views/app/shop/cart.html
+++ b/promopay/www/views/app/shop/cart.html
@@ -24,12 +24,14 @@
                   <div class="col col-center col-50">
                     <span class="product-price">Value: €{{product.offer.val}}</span>
                   </div>
-                  <div class="col col-center col-50">
-                    <button class="button button-outline button-assertive remove-product-button" ng-click="removeProductFromCart(product)">
-                      Remove Coupon
+                  <div class="col col-25">
+                    <button class="button button-outline button-balanced" ui-sref="app.product-detail({productId: product.id})">
+                      <i class="icon ion-ios-checkmark"></i> Use
                     </button>
-                    <button class="button button-outline button-assertive" ui-sref="app.product-detail({productId: product.id})">
-                      Use Coupon
+                  </div>
+                  <div class="col col-25">
+                    <button class="button button-outline button-assertive remove-product-button" ng-click="removeProductFromCart(product)">
+                      <i class="icon ion-ios-close"></i> Remove
                     </button>
                   </div>
                 </div>
