[impl-N/A] Lots opf changes

--- a/promopay/www/views/app/legal/faq.html
+++ b/promopay/www/views/app/legal/faq.html
@@ -1,22 +1,87 @@
 <ion-modal-view class="modal-view">
-	<ion-header-bar>
-		<h1 class="title modal-title">FAQ</h1>
-		<a class="button button-clear" ng-click="faq_modal.hide()"><span class="icon ion-close"></span></a>
-	</ion-header-bar>
-	<ion-content class="padding">
-    <div class="row">
-      <div class="col">
-        <div class="privacy-policy">
-    			<p>Last modified: April 14, 2014</p>
-    			<h4 class="title">Welcome to PromoPay!</h4>
-    			<p>Thanks for using our products and services (“Services”). Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    			<h4 class="title">Using our Services</h4>
-    			<p>You must follow any policies made available to you within the Services.</p>
-    			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-    			<h4 class="title">About these Terms</h4>
-    			<p>We may modify these terms or any additional terms that apply to a Service to, for example, reflect changes to the law or changes to our Services. You should look at the terms regularly. We’ll post notice of modifications to these terms on this page. We’ll post notice of modified additional terms in the applicable Service. Changes will not apply retroactively and will become effective no sooner than fourteen days after they are posted. However, changes addressing new functions for a Service or changes made for legal reasons will be effective immediately. If you do not agree to the modified terms for a Service, you should discontinue your use of that Service.</p>
-    		</div>
-			</div>
-		</div>
-	</ion-content>
+    <ion-header-bar>
+        <h1 class="title modal-title">FAQ</h1>
+        <a class="button button-clear" ng-click="faq_modal.hide()">
+            <span class="icon ion-close"></span>
+        </a>
+    </ion-header-bar>
+    <ion-content class="padding">
+        <div class="row">
+            <div class="col">
+                <div class="privacy-policy">
+                    <h4 class="title">2.1 General FAQs</h4>
+                    <p>Q: Is the PromoPay Mobile app site free to use?</p>
+
+                    <p>
+                        A: Yes PromoPay Mobile app site is totally free to use.</p>
+
+                    <p>Q: When is the voucher valid?</p>
+                        <p>
+
+                    A: Any restrictions to the voucher will be listed in the terms and conditions for the voucher. </p>
+                       <p>
+
+                       Q: If I register will you send me lots of emails? A: No, we take your privacy seriously and will only send you
+                        correspondence directly related to the PromoPay Mobile app. </p>
+                        <p>
+
+                        Q: How do I contact Promotional Payments Solutions? </p>
+                        <p>
+
+                        A: Your feedback is really important to us so please let us know what you think of PromoPay Mobile app and what offers you would like to
+                        see in the future info@PromotionalPayments.com.</p>
+                    <h4 class="title">
+                        2.2 Voucher Code FAQs</h4>
+                    <p>Q: What is a Voucher Code? </p>
+                        <p>A: To make fantastic savings online a voucher code can be entered to give you an extra discount. Also known as promotional codes, e-vouchers or discount codes you simply present them at Merchant. </p>
+                        <p>Q: Are Voucher Codes free
+                        to use? A: All PromoPay Mobile app Voucher Code offers are free to use. </p>
+                        <p>Q: What do I do if a Voucher Codes does not work? </p>
+                        <p>A: If you discover a Voucher Code that is not working please let us know as your feedback is very important to us
+                        info@PromotionalPayments.com.</p>
+                    <h4 class="title">
+                        2.3 PromoPay Mobile app FAQs</h4>
+                    <p>
+
+                        Q: How much does PromoPay Mobile app cost? </p>
+                        <p>
+                            A: PromoPay Mobile app is a free app!
+                        </p>
+                        <p>
+
+                        Q: What happens if I redeem my voucher by accident? </p>
+                        <p>
+
+                        A: Unfortunately you will not able to get the voucher back if you redeem it by accident. If you press 'redeem
+                        voucher' it will be redeemed and will show in your history. Please be very careful not to press redeem until you are ready to use it. </p>
+
+                        <p>
+
+                        Q: is PromoPay Mobile app available on other phones?</p>
+                        <p>
+
+                        A: We want to make PromoPay Mobile app available on every
+                        handset so everyone can enjoy the great savings. Currently PromoPay Mobile app is available on Android and iPhones. </p>
+                        <p>
+
+                        Q: How can I use an offer when there is no Internet or phone signal? </p>
+                        <p>
+
+                        A: You can save you favourite offer in your wallet, by tapping
+                        Accept icon in advance when you have a connection. This saves the offer on your device to your wallet so you can use it later when there is no signal or Internet connection available. </p>
+                        <p>
+
+                        Q: How do I use Voucher Codes? A: Once you accept a Voucher it
+                        will be available in your wallet, when you want to use this Voucher simply access the Voucher via your wallet and press Redeem, this will display a human readable code and two barcodes. Present this when you are at the cashier. </p>
+                        <p>
+
+                        Q: What are push
+                        notifications? </p>
+                        <p>
+
+                        A: Push notifications allow you to be notified as soon as a new offer goes live from your favourite brand.</p>
+                </div>
+            </div>
+        </div>
+    </ion-content>
 </ion-modal-view>
