--- a/promopay/www/views/app/profile/settings.html
+++ b/promopay/www/views/app/profile/settings.html
@@ -17,7 +17,7 @@
         <i class="icon ion-ios-chatboxes-outline"></i>
         FAQ
       </a>
-      <a href="http://phs.ie" class="item item-icon-left settings-option">
+      <a class="item item-icon-left settings-option" ng-click="showHelp()">
         <i class="icon ion-ios-help-outline"></i>
         Help
       </a>
