--- a/promopay/www/views/app/legal/privacy-policy.html
+++ b/promopay/www/views/app/legal/privacy-policy.html
@@ -1,22 +1,170 @@
 <ion-modal-view class="modal-view">
-	<ion-header-bar>
-		<h1 class="title modal-title">Privacy Policy</h1>
-		<a class="button button-clear" ng-click="privacy_policy_modal.hide()"><span class="icon ion-close"></span></a>
-	</ion-header-bar>
-	<ion-content class="padding">
-    <div class="row">
-      <div class="col">
-        <div class="privacy-policy">
-    			<p>Last modified: April 14, 2014</p>
-    			<h4 class="title">Welcome to PromoPay!</h4>
-    			<p>Thanks for using our products and services (“Services”). Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    			<h4 class="title">Using our Services</h4>
-    			<p>You must follow any policies made available to you within the Services.</p>
-    			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-    			<h4 class="title">About these Terms</h4>
-    			<p>We may modify these terms or any additional terms that apply to a Service to, for example, reflect changes to the law or changes to our Services. You should look at the terms regularly. We’ll post notice of modifications to these terms on this page. We’ll post notice of modified additional terms in the applicable Service. Changes will not apply retroactively and will become effective no sooner than fourteen days after they are posted. However, changes addressing new functions for a Service or changes made for legal reasons will be effective immediately. If you do not agree to the modified terms for a Service, you should discontinue your use of that Service.</p>
-    		</div>
-			</div>
-		</div>
-	</ion-content>
+    <ion-header-bar>
+        <h1 class="title modal-title">Privacy Policy</h1>
+        <a class="button button-clear" ng-click="privacy_policy_modal.hide()">
+            <span class="icon ion-close"></span>
+        </a>
+    </ion-header-bar>
+    <ion-content class="padding">
+        <div class="row">
+            <div class="col">
+                <div class="privacy-policy">
+                    <h4 class="title">Privacy Policy</h4>
+                    <p>Promotional Payments Solutions values your privacy and is dedicated to safeguarding and preserving your privacy when using our application, visiting our website or communicating electronically with us. This Privacy Policy, together with our Terms
+                        & Conditions explains what happens to the types of personal and non-personal information we collect when you use the Promotional Payments Solutions application and website (www.PromotionalPayments.com). By using PromoPay Mobile app you agree to the
+                        terms of this Privacy Policy. If you do not agree to these terms please do not continue using PromoPay Mobile app. Promotional Payments Solutions uses the personal information we collect to provide our service to you. We will not rent, sell or share
+                        your personal information with any other company for its own marketing purposes without your consent except where mentioned within this policy.</p>
+                    <h4 class="title">4.1 Collection of Information
+                    </h4>
+                    <p>In order to deliver you the best possible service when using PromoPay Mobile app, we collect and process the following information: 4.2 Information you provide us When you download PromoPay Mobile app and use a voucher on for the first time, we
+                        ask you to register and provide us with personal information as follows: Your name, email address, date of birth, postcode and gender</p>
+                    <h4 class="title">4.3 Usage and redemption information</h4>
+                    <p>As part of the standard operation of using PromoPay Mobile app, we may collect certain non- personal information from you. For example, when you redeem a voucher, your mobile phone automatically records and sends basic information about your
+                        voucher redemption and application browsing. This may include the dates and times and redemption information and in the case of an offer being rejected, the information relating to the reason behind the rejection. We may combine this non-personal
+                        information with your personal information.</p>
+                    <h4 class="title">
+
+                        4.4 Mobile phone location
+
+                    </h4>
+                    <p>
+                        When you use PromoPay Mobile app, we may receive your location and will use this to give you offers which are near you. Depending on your handset or the network you subscribe to, Promotional Payments Solutions may automatically receive this
+                        information.</p>
+
+                    <h4 class="title">
+                        4.5 Mobile UDID
+
+                    </h4>
+                    <p>When you use the PromoPay Mobile app application for the first time, we will receive a unique identifier for your phone if your handset manufacturer or network provide it. Promotional Payments Solutions may use your unique mobile device
+                        identification information to offer you extended services and/or functionality. We may associate that information to the mobile device identification information and to other information we have collected from and about you; however we will not use
+                        that number to telemarket to you.</p>
+
+                    <h4 class="title">4.6 Directly communicating with Promotional Payments Solutions
+                    </h4>
+                    <p>When you send email or other communication to Promotional Payments Solutions, we may retain the communication in order to serve you.
+                    </p>
+
+                    <h4 class="title">4.7 Information you provide on our partners' websites</h4>
+                    <p>You mind find links to third party websites on our website. These websites should have their own privacy policies which you should check. We do not accept any responsibility or liability for their policies whatsoever as we have no control over them.</p>
+
+
+					<h4 class="title">
+4.8 Merchant loyalty information
+					</h4>
+					<p>
+						Promotional Payments Solutions may collect and save various merchants' Loyalty Card numbers for
+
+you. These numbers may be stored on the Promotional Payments Solutions servers and will be
+
+transmitted between the Promotional Payments Solutions servers and your device.
+					</p>
+
+
+					<h4 class="title">
+4.9 Use of Information and Data
+					</h4>
+					<p>
+						All personal data is stored securely in accordance with the Data Protection Act 1998.
+
+Unless we are legally required to do so, your data will not be disclosed to third parties.
+
+Where applicable, we may disclose your personal information to any member of our group. This
+
+includes, where applicable, our affiliates, our subsidiaries, our holding company and / or other
+
+companies within our group.
+					</p>
+
+
+					<h4 class="title">
+4.10 Emails
+					</h4>
+					<p>
+						Once you become a PromoPay Mobile app member we’ll send you email newsletters letting you
+
+know about our offers and deals. We may also send you other offers from our partners that we think
+
+you might be interested in. We’ll never share your details with a third party, and you can manage all
+
+your email subscriptions by login into your PromoPay Mobile app account and editing your email
+
+preferences, or unsubscribing via the link at the bottom of the email.
+					</p>
+
+
+					<h4 class="title">
+4.11 Unsubscribe
+					</h4>
+					<p>
+						Users who do not wish to receive our promotional e-mail messages may click the ‘unsubscribe’ link
+
+which will be found at the bottom of each e-mail from Promotional Payments Solutions. You will be
+
+sent to an ‘update your preferences’ page in your account where you can opt out of different types
+
+of promotional e-mails, or click unsubscribe from all.
+					</p>
+
+
+					<h4 class="title">
+4.12 Push notifications
+					</h4>
+					<p>
+						By downloading the PromoPay Mobile app you are opting into receive push notifications to your
+
+device via the application. These will be general notifications about our latest offers and location
+
+based messages when you are near a venue or shop with an offer. Both types of notification can be
+
+controlled in the settings section of the app.
+					</p>
+
+
+					<h4 class="title">
+4.13 Use of Cookies
+					</h4>
+					<p>
+						We may on occasion gather information regarding your computer whilst you are on our website.
+
+This enables us to improve our services and to provide statistical information regarding the use of
+
+our website to our advertisers where appropriate. We may also use the information we collect from
+
+you to show you relevant adverts when you are visiting other sites.
+
+Such information will not identify you personally it is statistical data about our visitors and their use
+
+of our site. This statistical data does not identify any personal details whatsoever.
+
+Similarly to the above, we may gather information about your general internet use by using a cookie
+
+file. Where used, these cookies are downloaded to your computer automatically. This cookie file is
+
+stored on the hard drive of your computer as cookies contain information that is transferred to your
+
+computer's hard drive. They help us to improve our website and the service that we provide to you.
+
+All computers have the ability to decline cookies. This can be done by activating the setting on your
+
+browser which enables you to decline the cookies. Please note that should you choose to decline
+
+cookies, you may be unable to access particular parts of our website.
+
+Our advertisers may also use cookies, over which we have no control. Such cookies (if used) would
+
+be downloaded once you click on advertisements on our website.
+					</p>
+
+					<h4 class="title">
+4.14 Information Security
+					</h4>
+					<p>
+						We have take certain operational, physical and technical steps available to safeguard and secure the
+
+information we collect from our users and store on our servers.
+					</p>
+                </div>
+            </div>
+        </div>
+    </ion-content>
 </ion-modal-view>
