--- a/promopay/www/views/app/shop/shop-sale.html
+++ b/promopay/www/views/app/shop/shop-sale.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Promopay" class="shop-sale-view">
   <ion-content>
     <div class="row shop-products-narrow-cards-outer">
-      <div ng-repeat="product in products" ng-if="product.vchr.spends.length > 0" class="col col-100 shop-product-narrow-card">
+      <div ng-repeat="product in products" ng-if="product.vchr.spends.length > 0 || product.removed === 1" class="col col-100 shop-product-narrow-card">
         <div class="list">
           <div class="row vouchers">
             <div class="col-25 list-image" style="background-image: url(http://www.rglhosting2.com/validation.3.0.dag/images/vouchers/{{product.offer.imgName}})"></div>
@@ -17,9 +17,6 @@
           </div>
         </div>
       </div>
-      <!-- <button class="button button-full button-assertive" ng-click="clearCoupons()">
-        Clear Expired Vouchers
-      </button> -->
     </div>
   </ion-content>
 </ion-view>
